--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://bloglistcloudstack.github.io/GoodToGoRestoration-Deal-With-Fire-and-Smoke-Damage/">https://bloglistcloudstack.github.io/GoodToGoRestoration-Deal-With-Fire-and-Smoke-Damage/</a><br>    
+                <a target="_bLank" href="https://goodtogorestoration.s3.us-east-005.backblazeb2.com/Deal+With+Fire+and+Smoke+Damage/index.html">https://goodtogorestoration.s3.us-east-005.backblazeb2.com/Deal+With+Fire+and+Smoke+Damage/index.html</a><br>
+                <a target="_bLank" href="https://good-to-go-restoration-deal-wi-git-59e2c8-chris-kherks-projects.vercel.app/">https://good-to-go-restoration-deal-wi-git-59e2c8-chris-kherks-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://incandescent-sfogliatella-6203d1.netlify.app">https://incandescent-sfogliatella-6203d1.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
